--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Login Administrador</title>
+  <title>Login Administrador - Museo de Cera</title>
   <style>
     * {
       box-sizing: border-box;
@@ -12,27 +12,42 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #f4f6f8;
+      background-color: #f8f4f4;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      flex-direction: column;
+    }
+
+    header {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      background-color: #7a1e1e;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      font-size: 24px;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     .login-container {
       background-color: #ffffff;
       padding: 30px 40px;
       border-radius: 12px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
       width: 100%;
       max-width: 400px;
       text-align: center;
+      margin-top: 80px;
     }
 
     .login-container h1 {
-      margin-bottom: 20px;
-      font-size: 24px;
-      color: #333;
+      margin-bottom: 25px;
+      font-size: 22px;
+      color: #7a1e1e;
     }
 
     input[type="email"],
@@ -48,7 +63,7 @@
     button {
       width: 100%;
       padding: 12px;
-      background-color: #007bff;
+      background-color: #a52a2a;
       color: white;
       border: none;
       border-radius: 8px;
@@ -58,7 +73,7 @@
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: #8b1a1a;
     }
 
     #mensaje-error {
@@ -66,11 +81,25 @@
       font-size: 14px;
       color: red;
     }
+
+    footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background-color: #7a1e1e;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
+
+  <header>Museo de Cera - Acceso Administrador</header>
+
   <div class="login-container">
-    <h1>Panel de Administrador</h1>
+    <h1>Iniciar sesión</h1>
     <form id="form-login">
       <input type="email" id="email" placeholder="Correo electrónico" required />
       <input type="password" id="password" placeholder="Contraseña" required />
@@ -79,6 +108,9 @@
     <div id="mensaje-error"></div>
   </div>
 
+  <footer>&copy; 2025 Museo de Cera. Todos los derechos reservados.</footer>
+
   <script type="module" src="./app.js"></script>
 </body>
 </html>
+
